--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.12.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "resolve": "1.6.0",
